# infocus

./: .env.example  Readme.md  docker-compose.yml  pyproject.toml
data/: telegram_ai_posts.csv
db/: README.md  schema.sql
docs/: system_diagrams.md
examples/front-mockups/: news_aggregator.html
infocus/: __init__.py
infocus/telegram/: __init__.py  client.py  parser.py
src/infocus/: __init__.py  config.py  embedding.py  llm.py  pipeline.py
tests/: test_pipeline.py
