[project]
name = "infocus"
version = "0.1.0"
description = "Local LLM/embedding pipeline for Telegram news processing"
authors = [{ name = "InFocus" }]
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
runtime = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
